NLA Alt+changing value works for selected object but not for selected strips #66494

Closed
opened 2019-07-06 05:28:33 +02:00 by Vyacheslav Kobozev · 8 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f

Short description of error
If I pressing Alt and trying to change repeat length for strips, it changes not for selected strips or tracks, but for selected objects.
If one object have two strips and both selected and object is selected too, only one strip`s repeat can be changed with alt-drag over field.
Similar situation for scale, and other fields.
Here the video
2019-07-06_06-10-04.mp4

In my opinion only selected strips and tracks should matter, not selection of objects, because we operate with strips.

Exact steps for others to reproduce the error
Here the scene. NLA strips alt+edit.blend

Deselect objects, select strips, try to change their property (Repeat) with Alt-drag over field.
Then select two cubes, all strips and try again.
Then select all cubes, and try again.
Select cube with two strips, select both strips, try again to alt+drag theirs repeat length.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` **Short description of error** If I pressing Alt and trying to change repeat length for strips, it changes not for selected strips or tracks, but for selected objects. If one object have two strips and both selected and object is selected too, only one strip`s repeat can be changed with alt-drag over field. Similar situation for scale, and other fields. Here the video [2019-07-06_06-10-04.mp4](https://archive.blender.org/developer/F7568616/2019-07-06_06-10-04.mp4) In my opinion only selected strips and tracks should matter, not selection of objects, because we operate with strips. **Exact steps for others to reproduce the error** Here the scene. [NLA strips alt+edit.blend](https://archive.blender.org/developer/F7568621/NLA_strips_alt_edit.blend) Deselect objects, select strips, try to change their property (Repeat) with Alt-drag over field. Then select two cubes, all strips and try again. Then select all cubes, and try again. Select cube with two strips, select both strips, try again to alt+drag theirs repeat length.

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscribers: @ideasman42, @ZedDB

Added subscribers: @ideasman42, @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-07-10 11:15:26 +02:00

@ideasman42 could you take a look at this after 2.80?

@ideasman42 could you take a look at this after 2.80?
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:33:51 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This is simply not implemented for selected NLA strips. Alt+click/drag uses the same functions as the "Copy to Selected" operator, which doesn't look at NLA strip selection. The Blender manual also mentions: {key Alt} Hold while editing values to apply the change to all selected items (objects, bones, sequence-strips).

Although I agree it makes total sense to have this work for selected NLA strips as well, I do classify this as a Known Issue rather than a bug.

This is simply not implemented for selected NLA strips. Alt+click/drag uses the same functions as the "Copy to Selected" operator, which doesn't look at NLA strip selection. The Blender manual also mentions: {key Alt} [Hold while editing values to apply the change to all selected items (objects, bones, sequence-strips)](https://docs.blender.org/manual/en/dev/interface/keymap/introduction.html#properties). Although I agree it makes total sense to have this work for selected NLA strips as well, I do classify this as a Known Issue rather than a bug.
Philipp Oeser self-assigned this 2020-03-30 19:27:29 +02:00

This issue was referenced by f8c4f5e308

This issue was referenced by f8c4f5e3085998c7db55fb490cb04c48c575a222

This issue was referenced by 60ff3a7daf

This issue was referenced by 60ff3a7daff75e631993e6e5d284746442e824f3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66494
No description provided.