Add a "selected_nla_strips" context member

Needed for upcomming fix for T66494.

ref T66494 / D7281